--- a/views/admin/faculty/faculty.ejs
+++ b/views/admin/faculty/faculty.ejs
@@ -309,6 +309,16 @@
    <%- include('../../partials/footer-script') %>
 
    <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
+   document.addEventListener("click", function(event) {
+    const target = event.target;
+    if (target.classList.contains("editBtn")) {
+        editFaculty(target.dataset.id);
+    } else if (target.classList.contains("deleteBtn")) {
+        deleteFaculty(target.dataset.id);
+    } else if (target.classList.contains("viewBtn")) {
+        viewFaculty(target.dataset.id);
+    }
+});
                   $("#facultyForm").on("submit", async e => {
 							e.preventDefault();
 							try {
