--- a/views/admin/leave-tracker/leave-faculty-tracker.ejs
+++ b/views/admin/leave-tracker/leave-faculty-tracker.ejs
@@ -232,7 +232,16 @@
    <%- include('../../partials/footer-script') %>
 
    <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
-
+document.addEventListener("click", function(event) {
+    const target = event.target;
+    if(target.classList.contains("editBtn")) {
+         editLeaveTracker(target.dataset.id);
+    } else if (target.classList.contains("deleteBtn")) {
+        deleteLeaveTracker(target.dataset.id);
+    } else if (target.classList.contains("viewBtn")) {
+        viewLeaveTracker(target.dataset.id);
+    }
+});
        
 function viewLeaveTracker(leaveId) {
     try {
