--- a/views/admin/leave-tracker/leave-student-tracker.ejs
+++ b/views/admin/leave-tracker/leave-student-tracker.ejs
@@ -234,7 +234,16 @@
    <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
 
 
-     
+     document.addEventListener("click", function(event) {
+    const target = event.target;
+     if(target.classList.contains("editBtn")) {
+         editLeaveTracker(target.dataset.id);
+    } else if (target.classList.contains("deleteBtn")) {
+        deleteLeaveTracker(target.dataset.id);
+    } else if (target.classList.contains("viewBtn")) {
+        viewLeaveTracker(target.dataset.id);
+    }
+});
        
                   
 
