--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -1,10 +1,10 @@
-<%- include('../../partials/top-bar') %>
+<%- include('../partials/top-bar') %>
       <!-- Site wrapper -->
       <div class="wrapper">
-         <%- include('../../partials/header') %>
+         <%- include('../partials/header') %>
          <!-- =============================================== -->
          <!-- Left side column. contains the sidebar -->
-       <%- include('../../partials/sidebar') %>
+       <%- include('../partials/sidebar') %>
          <!-- =============================================== -->
          <!-- Content Wrapper. Contains page content -->
          <div class="content-wrapper">
@@ -14,12 +14,30 @@
                   <i class="fa fa-dashboard"></i>
                </div>
                <div class="header-title">
+                  <div class="row">
+                     <div class="form-group col-lg-4" >
                   <h1>SCHOOL ERP Admin Dashboard</h1>
                   <small>Very detailed & featured admin.</small>
+                  </div>
+                  <div class="form-group col-lg-3" > </div> 
+                  <div class="form-group col-lg-4" >
+                                      <label>Select Date Range</label><br>
+                                  <div id="reportrange"  class="pull-left" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc;">
+                                    <i class="glyphicon glyphicon-calendar fa fa-calendar"></i>&nbsp;
+                                    <span></span> <b class="caret"></b>
+                                 </div>
+                                 <label></label>
+                                      
+                                <button class="btn btn-success" id="filter_records">Filter</button>
+                                 </div>
+                                 </div>
                </div>
+               
             </section>
             <!-- Main content -->
             <section class="content">
+                            
+                               
                <div class="row">
                   <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                      <div id="cardbox1">
@@ -442,9 +460,88 @@
             <!-- /.content -->
          </div>
          <!-- /.content-wrapper -->
-        <%- include('../../partials/footer') %>
+        <%- include('../partials/footer') %>
       </div>
       <!-- /.wrapper -->
       <!-- Start Core Plugins
          =====================================================================-->
-   <%- include('../../partials/footer-script') %>
+   <%- include('../partials/footer-script') %>
+   <script  nonce="<%= nonce %>" >
+let startDates;
+let endDates;
+$(function() {
+
+    var start = moment().subtract(29, 'days');
+    var end = moment();
+
+    function cb(start, end) {
+        $('#reportrange span').html(start.format('YYYY-MM-DD') + ' - ' + end.format('YYYY-MM-DD'));
+        startDates = start.format('YYYY-MM-DD');
+         endDates = end.format('YYYY-MM-DD');
+    }
+
+    $('#reportrange').daterangepicker({
+        startDate: start,
+        endDate: end,
+        ranges: {
+           'Today': [moment(), moment()],
+           'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+           'Last 7 Days': [moment().subtract(6, 'days'), moment()],
+           'Last 30 Days': [moment().subtract(29, 'days'), moment()],
+           'This Month': [moment().startOf('month'), moment().endOf('month')],
+           'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
+        }
+    }, cb);
+
+    cb(start, end);
+    
+});
+var dataTable;
+       $(document).on('click','#filter_records', function () {
+    
+alert("oppp")
+
+       
+        if (dataTable) {
+                  dataTable.destroy();
+                  dataTable.clear().draw();
+    }
+         dataTable = $('#sample_data').DataTable({
+		"processing": true,
+		"serverSide": true,
+			 dom: 'Bfrtip',
+   buttons: [
+      {
+         extend: 'csv',
+        
+         exportOptions: {
+            columns: 'th:not(:last-child)'
+         }
+      },
+       {
+         extend: 'pdf',
+        
+         exportOptions: {
+            columns: 'th:not(:last-child)'
+         }
+      }
+   ],
+		"order":[],
+		"ajax":{
+			url:"/get-dashboard-data-by-school",
+			type:"POST",
+     data:{startDates:startDates,endDates:endDates},
+
+		},
+         columns: [
+        { data: "created_at" },
+        { data: "attendance_status" },
+        { data: "check_in" },
+        { data: "check_out" },
+	],
+		
+	});
+ 
+       
+})
+   </script>
