--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -352,41 +352,16 @@
                         <div class="panel-body">
                            <div class="Workslist">
                               <div class="worklistdate">
-                                 <table class="table table-hover">
+                                 <table id="sample_data" class="table table-bordered table-striped">
                                     <thead>
                                        <tr>
                                           <th>Notice</th>
                                           <th>Published By</th>
                                           <th>Date Added</th>
+                                          <th> Added</th>
                                        </tr>
                                     </thead>
-                                    <tbody>
-                                       <tr class="info">
-                                          <td>new notice</td>
-                                          <td>Mr. Alrazy</td>
-                                          <td>20th April 2017</td>
-                                       </tr>
-                                       <tr>
-                                          <td>Urgent notice</td>
-                                          <td>Mr. Alrazy</td>
-                                          <td>20th june 2017</td>
-                                       </tr>
-                                       <tr>
-                                          <td>Urgent notice</td>
-                                          <td>Mr. Jahir</td>
-                                          <td>26th june 2017</td>
-                                       </tr>
-                                       <tr>
-                                          <td>Urgent notice</td>
-                                          <td>Mr. leo</td>
-                                          <td>3rd june 2017</td>
-                                       </tr>
-                                       <tr>
-                                          <td>Notice</td>
-                                          <td>Mr. Karim</td>
-                                          <td>3rd July 2017</td>
-                                       </tr>
-                                    </tbody>
+                                  
                                  </table>
                               </div>
                            </div>
@@ -467,6 +442,7 @@
          =====================================================================-->
    <%- include('../partials/footer-script') %>
    <script  nonce="<%= nonce %>" >
+   
 let startDates;
 let endDates;
 $(function() {
@@ -497,51 +473,189 @@ $(function() {
     
 });
 var dataTable;
-       $(document).on('click','#filter_records', function () {
-    
-alert("oppp")
+var sale_chart;
 
+  dataTable = $("#sample_data").DataTable({
+			"processing": true,
+			"serverSide": true,
+			  "order": [],
+			ajax: {
+				url: `/get-dashboard-data-by-school`,
+				type: "POST",
+			
+			},
+			columns: [{ data: "created_at" }, { data: "attendance_status" }, {data:"check_in"},{data:"check_out"}],
+		});
+      
+$(document).on('click', '#filter_records', function () {
+   if ($.fn.DataTable.isDataTable('#sample_data')) {
+                    $('#sample_data').DataTable().destroy();
+                }
+
+    // Initialize DataTable
+    dataTable = $('#sample_data').DataTable({
+        "processing": true,
+        "serverSide": true,
        
-        if (dataTable) {
-                  dataTable.destroy();
-                  dataTable.clear().draw();
-    }
-         dataTable = $('#sample_data').DataTable({
-		"processing": true,
-		"serverSide": true,
-			 dom: 'Bfrtip',
-   buttons: [
-      {
-         extend: 'csv',
-        
-         exportOptions: {
-            columns: 'th:not(:last-child)'
-         }
-      },
-       {
-         extend: 'pdf',
-        
-         exportOptions: {
-            columns: 'th:not(:last-child)'
-         }
-      }
-   ],
-		"order":[],
-		"ajax":{
-			url:"/get-dashboard-data-by-school",
-			type:"POST",
-     data:{startDates:startDates,endDates:endDates},
+        "order": [],
+        "ajax": {
+            url: "/get-dashboard-data-by-school",
+            type: "POST",
+            data: {
+                startDates: startDates,
+                endDates: endDates
+            },
+        },
+        columns: [{
+                data: "created_at"
+            },
+            {
+                data: "attendance_status"
+            },
+            {
+                data: "check_in"
+            },
+            {
+                data: "check_out"
+            },
+        ],
+        "drawCallback": function (settings) {
+            var sales_date = [];
+            var sale = [];
 
-		},
-         columns: [
-        { data: "created_at" },
-        { data: "attendance_status" },
-        { data: "check_in" },
-        { data: "check_out" },
-	],
-		
-	});
+            // Populate data arrays for the chart
+            for (var count = 0; count < settings.aoData.length; count++) {
+                sales_date.push(settings.aoData[count]._aData[2]);
+                sale.push(parseFloat(settings.aoData[count]._aData[1]));
+            }
+
+            // Update chart data
+            var chart_data = {
+                labels: sales_date,
+                datasets: [{
+                    label: 'Sales',
+                    backgroundColor: 'rgb(255, 205, 86)',
+                    color: '#fff',
+                    data: sale
+                }]
+            };
+
+            // Destroy existing chart instance if it exists
+            if (sale_chart) {
+                sale_chart.destroy();
+            }
+
+            // Create new chart instance
+            var group_chart3 = $('#bar_chart');
+            sale_chart = new Chart(group_chart3, {
+                type: 'bar',
+                data: chart_data
+            });
+        }
+    });
+});
+// $(document).ready(function(){
+
+     
+   //   dataTable = $("#sample_data").DataTable({
+	// 		processing: true,
+	// 		serverSide: true,
+			
+	// 		ajax: {
+	// 			url: `/get-dashboard-data-by-school`,
+	// 			type: "POST",
+			
+	// 		},
+	// 		columns: [{ data: "created_at" }, { data: "attendance_status" }, {data:"check_in"},{data:"check_out"}],
+	// 	});
+// fetch_data();
+//     var sale_chart;
+
+//     function fetch_data(start_date = '', end_date = '')
+//     {
+// if ($.fn.DataTable.isDataTable('#sample_data')) {
+//                     $('#sample_data').DataTable().destroy();
+//                 }
+//          dataTable = $('#sample_data').DataTable({
+//             "processing" : true,
+//             "serverSide" : true,
+//             "order" : [],
+//             "ajax" : {
+//                 url:"/get-dashboard-data-by-school",
+//                 type:"POST",
+//                 data:{action:'fetch', start_date:start_date, end_date:end_date}
+//             },
+//             "drawCallback" : function(settings)
+//             {
+//                 var sales_date = [];
+//                 var sale = [];
+
+//                 for(var count = 0; count < settings.aoData.length; count++)
+//                 {
+//                     sales_date.push(settings.aoData[count]._aData[2]);
+//                     sale.push(parseFloat(settings.aoData[count]._aData[1]));
+//                 }
+
+//                 var chart_data = {
+//                     labels:sales_date,
+//                     datasets:[
+//                         {
+//                             label : 'Sales',
+//                             backgroundColor : 'rgb(255, 205, 86)',
+//                             color : '#fff',
+//                             data:sale
+//                         }
+//                     ]   
+//                 };
+
+//                 var group_chart3 = $('#bar_chart');
+
+//                 if(sale_chart)
+//                 {
+//                     sale_chart.destroy();
+//                 }
+
+//                 sale_chart = new Chart(group_chart3, {
+//                     type:'bar',
+//                     data:chart_data
+//                 });
+//             }
+//         });
+//     }
  
-       
-})
+    
+
+// var start = moment().subtract(29, 'days');
+// var end = moment();
+
+// function cb(start, end) {
+//     $('#reportrange span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
+// }
+
+// $('#reportrange').daterangepicker({
+//     startDate: start,
+//     endDate: end,
+//     ranges: {
+//        'Today': [moment(), moment()],
+//        'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+//        'Last 7 Days': [moment().subtract(6, 'days'), moment()],
+//        'Last 30 Days': [moment().subtract(29, 'days'), moment()],
+//        'This Month': [moment().startOf('month'), moment().endOf('month')],
+//        'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
+//     }
+// }, function(start, end){
+
+//     $('#sample_data').DataTable().destroy();
+
+//     fetch_data(start, end);
+
+// });
+
+// cb(start, end);
+
+
+
+// });
+
+
    </script>
