--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -91,7 +91,7 @@ display: none;
                             </div>
                       <div class="form-group">
                                  <label>Select Role</label>
-                                 <select class="form-control" id="role" required>
+                                 <select class="form-control" id="role"name="role" required>
                                     <option value="">Please Select Role</option>
                                     <option value="1">Institute</option>
                                     <option value="2">Faculty</option>
@@ -110,7 +110,7 @@ display: none;
                                 </div>
                                 <div class="form-group col-lg-6">
                                     <label>Principal Name</label>
-                                    <input type="password" id="principal_name" placeholder="Principal Name" class="form-control" name="principal_name" required>
+                                    <input type="test" id="principal_name" placeholder="Principal Name" class="form-control" name="principal_name" required>
                                 </div>
                                 <div class="form-group col-lg-6">
                                     <label>Principal Email ID</label>
