--- a/views/admin/admission/admission.ejs
+++ b/views/admin/admission/admission.ejs
@@ -99,7 +99,7 @@
                            <div class="row">
                               <div class="col-md-12">
                                 <form action="" id="studentForm">
-                                  <input type="hidden" id="student_school_id" value="<%= user[0].id %>" class="form-control" name="student_school_id" >
+                                  <input type="hidden" id="student_school_id" value="<%= user[0].role=='student'?user[0].track_id:user[0].track_school_id %>" class="form-control" name="student_school_id" >
                             <div class="row">
                                 <div class="form-group col-lg-6">
                                     <label>Name</label>
@@ -123,7 +123,7 @@
                                    <select name="student_class_id" id="student_class_id" class="form-control" required>
                                     <option value="">Please Select</option>
                                     <% for(let i = 0; i < data.length; i++){%> 
-                                    <option value="<%= data[i].id %>"><%= data[i].class_name %></option>
+                                    <option value="<%= data[i].track_id %>"><%= data[i].class_name %></option>
                                        <% } %>
                                    </select>
                                 </div>
@@ -240,7 +240,7 @@
                               <div class="row">
                               <div class="col-md-12">
                                 <form action="" id="bulkUploadForm">
-                                  <input type="hidden" id="student_school_id" value="<%= user[0].id %>" class="form-control" name="student_school_id" >
+                                  <input type="hidden" id="student_school_id" value="<%=  user[0].role=='student'?user[0].track_id:user[0].track_school_id %>" class="form-control" name="student_school_id" >
                             <div class="row">
 
                                 <div class="form-group col-lg-6">
